Archive2/2c/a2452f121cd7a9/output
main.cpp:7:8: error: 'aligned_union' in namespace 'std' does not name a template type
   std::aligned_union</*Len*/0, int, float, double>::type storage_;
        ^
main.cpp: In function 'int main()':
main.cpp:11:11: warning: unused variable 't' [-Wunused-variable]
   Testing t;
           ^
